--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ test_lib = []
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
+hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }
 pico-args = "0.5.0"
+rayon = "1.10.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
