faster parsing of numbers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,6 @@ aoc-mine = { git = "https://github.com/stevenwcarter/aoc-mine.git" }
 anyhow = "1.0.100"
 cached = "0.56.0"
 nohash = "0.2.0"
+atoi_simd = "0.17.0"
 
 # Solution dependencies
