--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,7 @@ anyhow = "1.0.100"
 cached = "0.56.0"
 nohash = "0.2.0"
 atoi_simd = "0.17.0"
+pathfinding = "4.14.0"
+terminal_size = "0.4.3"
 
 # Solution dependencies
